feat: update fzf pickers

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,25 +7,67 @@
 # Terminal multiplexer
 # https://github.com/tmux/tmux
 
+# TODO: create a fabric workflow (with tmux popop)
+# bind-key "A" display-popup -E -w 40% "sesh connect \"$(
+#   fabric -l | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a fabric pattern' --prompt='🧠'
+# )\""
+
+# global sessions
+bind-key "K" run-shell "sesh connect \"$(
+  sesh list --icons | fzf-tmux -p 100%,100% --no-border \
+    --ansi \
+    --list-border \
+    --no-sort --prompt '⚡  ' \
+    --color 'list-border:5,input-border:3,preview-border:2,header-bg:-1,header-border:6' \
+    --input-border \
+    --header-border \
+    --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --margin 6% \
+    --preview-window 'right:70%' \
+    --preview 'sesh preview {}' \
+)\""
+
+# root sessions
+bind-key "R" run-shell "sesh connect \"\$(
+  sesh list --icons | fzf-tmux -p 100%,100% --no-border \
+    --query  \"\$(sesh root)\" \
+    --ansi \
+    --list-border \
+    --no-sort --prompt '⚡  ' \
+    --color 'list-border:5,input-border:3,preview-border:2,header-bg:-1,header-border:6' \
+    --input-border \
+    --header-border \
+    --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --margin 6% \
+    --preview-window 'right:70%' \
+    --preview 'sesh preview {}' \
+)\""
+
+
+
 # TODO: learn how this works
 set-option -g focus-events on
 
 # TODO: find a way to toggle this?
 set-option -g display-time 3000
 
-# FIX: user action isn't recognized by Wezterm via `run-shell` 😭
-# set-hook -g client-session-changed 'run-shell -t :1 "tmux-session-changed"'
-
 # colors
-# set-option -sa terminal-features ',xterm-256color:RGB'
 set -g default-terminal "tmux-256color"
 set-option -a terminal-features 'xterm-256color:RGB'
-# set -ga update-environment TERM
-# set -ga update-environment TERM_PROGRAM
-# set -g default-terminal "${TERM}"
-
-# set-option -g automatic-rename on
-# set-option -g automatic-rename-format '#(~/.config/tmux/plugins/tmux-nerd-font-window-name/bin/tmux-nerd-font-window-name #{pane_current_command} #{window_panes})'
 
 set -g base-index 1          # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off # don't exit from tmux when closing a session
@@ -38,9 +80,7 @@ set -g status-interval 3     # update the status bar every 3 seconds
 
 set -g status-left "#[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml) "
 set -g status-right ""
-# set -g status-right " #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml)"
-set -g status-left-length 300 # increase length (from 10)
-# set -g status-right-length 200   # increase length (from 10)
+set -g status-left-length 300    # increase length (from 10)
 set -g status-position top       # macOS / darwin style
 set -g status-style 'bg=default' # transparent
 
@@ -83,74 +123,6 @@ bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
 
-bind-key "J" display-popup -E -w 33% -h 63% "sesh connect \"$(
-  sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
-)\""
-
-# bind-key "R" display-popup -E -w 40% "sesh connect \"\$(
-#   sesh list -i -H | gum filter --value \"\$(sesh root)\" --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
-# )\""
-
-# bind-key "K" display-popup -E -w 40% "sesh connect \"$(
-#   sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
-# )\""
-
-bind-key "A" display-popup -E -w 40% "sesh connect \"$(
-  fabric -l | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a fabric pattern' --prompt='🧠'
-)\""
-
-# bind-key "J" display-popup -E -w 40% "sesh connect \"$(
-#   sesh list | zf -p --height 50
-# )\""
-
-# bind-key "J" run-shell "sesh connect \"$(
-#   sesh list | fzf-tmux -p 55%,60% \
-#     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
-#     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-#     --bind 'tab:down,btab:up' \
-#     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
-#     --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
-#     --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
-#     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
-#     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-#     --bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
-# )\""
-
-# NOTE: has icons but is less stable
-# bind-key "K" run-shell "sesh_fzf_tmux_choose"
-bind-key "K" run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 100%,100% \
-    --no-sort --ansi --prompt '⚡  ' --no-border \
-    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-    --bind 'tab:down,btab:up' \
-    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
-    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
-    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
-    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
-    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
-    --margin 8% \
-    --preview-window 'right:60%:noborder' \
-    --preview 'sesh preview {}'
-)\""
-
-# Relative sesh switcher
-bind-key "R" run-shell "sesh connect \"\$(
-  sesh list -i -H | fzf-tmux -p 100%,100% \
-    --no-sort --ansi --prompt '⚡  ' --no-border --query  \"\$(sesh root)\" \
-    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-    --bind 'tab:down,btab:up' \
-    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
-    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
-    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
-    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
-    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
-    --margin 8% \
-    --preview-window 'right:60%:noborder' \
-    --preview 'sesh preview {}'
-)\""
-
 # NOTE: can be used for debugging
 # )\" 2> /tmp/sesh-$(date +"%Y-%m-%d-%H-%M-%S").txt"
 
@@ -175,7 +147,7 @@ set -g @plugin 'git@github.com:joshmedeski/tmux-nerd-font-window-name'
 set -g @tnotify-custom-cmd 'bash ~/c/dotfiles/bin/tmux-notify.sh'
 
 # community plugins
-set -g @plugin 'christoomey/vim-tmux-navigator' # <ctrl>+hjkl
+set -g @plugin 'joshmedeski/vim-tmux-navigator' # <ctrl>+hjkl
 set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
 # set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'rickstaa/tmux-notify'
