feat: update style of pickers

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -12,16 +12,18 @@
 #   fabric -l | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a fabric pattern' --prompt='🧠'
 # )\""
 
+# NOTE: hide duplicates flag
+# sesh list --icons --hide-duplicates | fzf-tmux -p 100%,100% --no-border \
+  
 # global sessions
 bind-key "K" run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 100%,100% --no-border \
+  sesh list --icons --hide-duplicates | fzf-tmux -p 100%,100% --no-border \
     --ansi \
     --list-border \
     --no-sort --prompt '⚡  ' \
-    --color 'list-border:5,input-border:3,preview-border:2,header-bg:-1,header-border:6' \
+    --color 'list-border:6,input-border:3,preview-border:2,header-bg:-1,header-border:6' \
     --input-border \
     --header-border \
-    --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
     --bind 'tab:down,btab:up' \
     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
     --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
@@ -29,7 +31,6 @@ bind-key "K" run-shell "sesh connect \"$(
     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
     --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
-    --margin 6% \
     --preview-window 'right:70%' \
     --preview 'sesh preview {}' \
 )\""
@@ -41,18 +42,14 @@ bind-key "R" run-shell "sesh connect \"\$(
     --ansi \
     --list-border \
     --no-sort --prompt '⚡  ' \
-    --color 'list-border:5,input-border:3,preview-border:2,header-bg:-1,header-border:6' \
+    --color 'list-border:6,input-border:3,preview-border:2,header-bg:-1,header-border:6' \
     --input-border \
-    --header-border \
-    --header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
     --bind 'tab:down,btab:up' \
-    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
     --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
     --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
     --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
-    --margin 6% \
     --preview-window 'right:70%' \
     --preview 'sesh preview {}' \
 )\""
