chore: ignore .aider

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ Library/Preferences/ru.keepcoder.Telegram.plist
 .config/yazi/flavors/
 .config/fish/conf.d/hass.fish
 app_support/lazygit/state.yml
+.aider*
