--- a/.config/sesh/sesh.toml
+++ b/.config/sesh/sesh.toml
@@ -18,6 +18,11 @@ startup_command = "sesh connect (ls | fzf --ansi --no-border --preview 'glow -s 
 # TODO: add `--hide-tmux` to fzf command (or switch to sesh preview)
 # startup_command = "sesh connect (ls | fzf --ansi --no-border --preview 'glow -s light {}/README.md' --preview-window=right:70,border-none --hide-tmux) && exit"
 
+[[session]]
+name = "tmux plugins"
+path = "~/.config/tmux/plugins"
+startup_command = "sesh connect (ls | fzf --ansi --no-border --preview 'glow -s light {}/README.md' --preview-window=right:70,border-none) && exit"
+
 [[session_preview]]
 pattern_folder_has = "README.md"
 preview_command = "glow -s light {}"
