--- a/.config/sesh/sesh.toml
+++ b/.config/sesh/sesh.toml
@@ -1,4 +1,5 @@
 import = ["~/.config/sesh/configs/nu-sesh.toml"]
+blacklist = ["scratch"]
 
 # TODO: experiment with long-living sesh picker (as session)
 # [[session]]
@@ -18,14 +19,10 @@ startup_command = "sesh connect (ls | fzf --ansi --no-border --preview 'glow -s 
 # TODO: add `--hide-tmux` to fzf command (or switch to sesh preview)
 # startup_command = "sesh connect (ls | fzf --ansi --no-border --preview 'glow -s light {}/README.md' --preview-window=right:70,border-none --hide-tmux) && exit"
 
-[[session]]
-name = "tmux plugins"
-path = "~/.config/tmux/plugins"
-startup_command = "sesh connect (ls | fzf --ansi --no-border --preview 'glow -s light {}/README.md' --preview-window=right:70,border-none) && exit"
-
-[[session_preview]]
-pattern_folder_has = "README.md"
-preview_command = "glow -s light {}"
+# TODO: implement?
+# [[session_preview]]
+# pattern_folder_has = "README.md"
+# preview_command = "glow -s light {}"
 
 # TODO: potential feature ideas
 # [[session]]
@@ -69,7 +66,7 @@ preview_command = "bat --style='full' --color=always ~/c/dotfiles/.config/aerosp
 # full, auto, plain, changes, header, header-filename,
 [[session]]
 name = "mactop"
-path = "/tmp"
+path = "/"
 startup_command = "sudo mactop"
 
 [[session]]
@@ -112,8 +109,11 @@ name = "tmux config"
 path = "~/c/dotfiles/.config/tmux"
 startup_command = "nvim tmux.conf"
 preview_command = "bat --language=bash --style=snip --color=always ~/c/dotfiles/.config/tmux/tmux.conf"
-# TODO: add `always_top = true` to force this to always be the top result
-# TODO: do the same for ghostty
+
+[[session]]
+name = "tmux plugins"
+path = "~/.config/tmux/plugins"
+startup_command = "sesh connect (ls | fzf --ansi --no-border --preview 'glow -s light {}/README.md' --preview-window=right:70,border-none) && exit"
 
 [[session]]
 name = "gitmux config"
