feat: update gitmux to use emojis

--- a/.config/tmux/gitmux.yml
+++ b/.config/tmux/gitmux.yml
@@ -9,7 +9,9 @@
 
 tmux:
   symbols:
-    branch: " "
+    ahead: "👆"
+    behind: "👇"
+    branch: "🌳"
     hashprefix: ":"
     staged: " "
     conflict: "󰕚 "
