feat: add abort to sesh

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,6 +25,7 @@ bind-key "K" run-shell "sesh connect \"$(
     --input-border \
     --header-border \
     --bind 'tab:down,btab:up' \
+    --bind 'ctrl-b:abort' \
     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
     --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
     --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
