--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -77,7 +77,12 @@ set -g set-clipboard on      # use system clipboard
 set -g status-interval 3     # update the status bar every 3 seconds
 
 set -g status-left "#[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml) "
+# set -g status-right-length 80
 set -g status-right ""
+
+# set-option -g status 2
+# set -g status-format[1] '#[fg=blue,nobold][#(tmux ls -F "##S##{?session_attached,*,}" | tr "\n" "|" | sed "s/ $/ /" )]'
+
 set -g status-left-length 300    # increase length (from 10)
 set -g status-position top       # macOS / darwin style
 set -g status-style 'bg=default' # transparent
@@ -136,6 +141,7 @@ set -g @tmux-nerd-font-window-name-shell-icon ''
 set -g @tmux-nerd-font-window-name-show-name false
 set -g @thumbs-command 'echo -n {} | pbcopy' # copy to clipboard
 set -g @thumbs-key C
+set -g @floax-bind H
 
 # my plugins (git@github.com: clones with ssh key for development)
 # set -g @plugin 'git@github.com:joshmedeski/t-smart-tmux-session-manager'
@@ -151,7 +157,8 @@ set -g @plugin 'fcsonline/tmux-thumbs'          # <cmd|shift>+c
 set -g @plugin 'rickstaa/tmux-notify'
 set -g @plugin 'omerxx/tmux-sessionx'
 # set -g @plugin 'IdoKendo/tmux-lazy'
-# set -g @plugin 'omerxx/tmux-floax'
+set -g @plugin 'omerxx/tmux-floax'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @plugin 'tmux-plugins/tpm'        # load tpm
 run "$HOME/.config/tmux/plugins/tpm/tpm" # run tpm (always end of file)
