feat: bind abort on other picker

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -46,6 +46,7 @@ bind-key "R" run-shell "sesh connect \"\$(
     --color 'list-border:6,input-border:3,preview-border:2,header-bg:-1,header-border:6' \
     --input-border \
     --bind 'tab:down,btab:up' \
+    --bind 'ctrl-b:abort' \
     --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
     --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
