feat: update colors for fzf

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -14,6 +14,25 @@
 
 # NOTE: hide duplicates flag
 # sesh list --icons --hide-duplicates | fzf-tmux -p 100%,100% --no-border \
+
+# ascii color definitions
+# 0  black
+# 1  red
+# 2  green
+# 3  yellow
+# 4  blue
+# 5  magenta
+# 6  cyan
+# 7  white
+# 8  bright black
+# 9  bright red
+# 10 bright green
+# 11 bright yellow
+# 12 bright blue
+# 13 bright magenta
+# 14 bright cyan
+# 15 bright white
+# -1 default
   
 # global sessions
 bind-key "K" run-shell "sesh connect \"$(
@@ -21,7 +40,7 @@ bind-key "K" run-shell "sesh connect \"$(
     --ansi \
     --list-border \
     --no-sort --prompt '⚡  ' \
-    --color 'list-border:6,input-border:3,preview-border:2,header-bg:-1,header-border:6' \
+    --color 'list-border:6,input-border:3,preview-border:4,header-bg:-1,header-border:6' \
     --input-border \
     --header-border \
     --bind 'tab:down,btab:up' \
@@ -43,7 +62,7 @@ bind-key "R" run-shell "sesh connect \"\$(
     --ansi \
     --list-border \
     --no-sort --prompt '⚡  ' \
-    --color 'list-border:6,input-border:3,preview-border:2,header-bg:-1,header-border:6' \
+    --color 'list-border:6,input-border:3,preview-border:4,header-bg:-1,header-border:6' \
     --input-border \
     --bind 'tab:down,btab:up' \
     --bind 'ctrl-b:abort' \
