chore: remove branch icon

--- a/.config/tmux/gitmux.yml
+++ b/.config/tmux/gitmux.yml
@@ -12,7 +12,7 @@ tmux:
     ahead: "👆"
     behind: "👇"
     clean: "👍 "
-    branch: "🌳"
+    branch: ""
     hashprefix: ":"
     staged: " "
     conflict: "󰕚 "
