--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,9 +24,11 @@ bind-key "K" run-shell "sesh connect \"$(
     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
     --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
-    --preview-window 'right:70%' \
-    --preview 'sesh preview {}' \
 )\""
+
+# NOTE: Preview 
+# --preview-window 'right:70%' \
+# --preview 'sesh preview {}' \
 
 # root sessions
 bind-key "R" run-shell "sesh connect \"\$(
