chore: remove clean icon

--- a/.config/tmux/gitmux.yml
+++ b/.config/tmux/gitmux.yml
@@ -11,7 +11,7 @@ tmux:
   symbols:
     ahead: "👆"
     behind: "👇"
-    clean: "👍 "
+    clean: ""
     branch: ""
     hashprefix: ":"
     staged: " "
