feat: add preview back, adjust title

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,9 +1,11 @@
+#
 # ████████╗███╗   ███╗██╗   ██╗██╗  ██╗
 # ╚══██╔══╝████╗ ████║██║   ██║╚██╗██╔╝
 #    ██║   ██╔████╔██║██║   ██║ ╚███╔╝
 #    ██║   ██║╚██╔╝██║██║   ██║ ██╔██╗
 #    ██║   ██║ ╚═╝ ██║╚██████╔╝██╔╝ ██╗
 #    ╚═╝   ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═╝
+#
 # Terminal multiplexer
 # https://github.com/tmux/tmux
 
@@ -19,16 +21,14 @@ bind-key "K" run-shell "sesh connect \"$(
     --bind 'tab:down,btab:up' \
     --bind 'ctrl-b:abort' \
     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
-    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-t:change-prompt(  )+reload(sesh list -t --icons)' \
     --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
     --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --preview-window 'right:70%' \
+    --preview 'sesh preview {}' \
 )\""
-
-# NOTE: Preview 
-# --preview-window 'right:70%' \
-# --preview 'sesh preview {}' \
 
 # root sessions
 bind-key "R" run-shell "sesh connect \"\$(
@@ -97,7 +97,7 @@ bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 # TODO: repeat this for all bindings
 
-bind -N "⌘+l last-session (via sesh) " L run-shell "sesh last || tmux display-message -d 1000 'Oops, no last sessions found'"
+# bind -N "⌘+l last-session (via sesh) " L run-shell "sesh last || tmux display-message -d 1000 'Oops, no last sessions found'"
 bind -N "⌘+9 switch to root session (via sesh) " 9 run-shell "sesh connect --root $(pwd)"
 
 bind -N "⌘+g lazygit " g new-window -c "#{pane_current_path}" -n "🌳" "lazygit 2> /dev/null"
