feat: use new icons for neovim

--- a/.config/tmux/tmux-nerd-font-window-name.yml
+++ b/.config/tmux/tmux-nerd-font-window-name.yml
@@ -9,8 +9,8 @@ icons:
   docker: "🐳"
   fish: "🐠"
   fx: "📄"
-  # nvim: "📝"
-  nvim: ""
+  nvim: "✒️"
+  # nvim: ""
   ollama: "🦙"
   overmind: "👀"
   stripe-mock: "💳"
